--- a/Frontend/NoteFront/src/App.css
+++ b/Frontend/NoteFront/src/App.css
@@ -25,8 +25,7 @@ body {
 
 
 .sideMenu.collapsed{
-  width: 70%;
-  padding: 20px 0;
+  width: 50%;
 }
 
 .sideMenu-button{
@@ -106,37 +105,56 @@ form{
 }
 
 
-nav {
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
 
-  ul li {
-    position: relative;
-    font-weight: 1000;
-    padding: 25px 100px;
-    color: white;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-  }
-
-  ul li .fas {
-    margin-right: -1.2em;
-    transform: scale(0);
-    transition: 0.3s;
-  }
-
-  ul li:hover .fas {
-    margin-right: 10px;
-    transform: scale(1);
-  }
-
-  ul li + li {
-    border-top: 1px solid #ffffff;
-  }
-
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
+
+nav ul li {
+  position: relative;
+  font-weight: 1000;
+  padding: 25px 100px;
+  color: white;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  border-bottom: 1px solid #ffffff;
+  box-sizing: border-box;
+}
+
+.sideMenu.collapsed nav ul li{
+  position: relative;
+  padding: 10px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.sideMenu.collapsed nav ul li span{
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+
+
+nav ul li span{
+  margin-right: -1.2em;
+  transform: scale(1);
+  transition: 0.3s;
+}
+
+nav ul li:hover span {
+  margin-right: 10px;
+  transform: scale(1.5) translateX(10px);
+  border-bottom: 1px solid #ffffff;
+}
+
+
 
